src/objects/Direccion_Cuenta__c.object
<CustomObject>
    <description>Objeto personalizado para asociar direcciones a una cuenta</description>
    <fields>
        <fullName>DCU_FOR_DireccionCompleta__c</fullName>
        <description>Campo que concatena la información de la dirección</description>
        <formula>DCU_TXT_Direccion__c + &apos;, &apos; + DCU_TXT_Codigo_Postal__c+ &apos;, &apos; +  DCU_TXT_Poblacion__c + &apos;, &apos; +
CASE(DCU_SEL_Provincia__c, &quot;01&quot;, &quot;ÁLAVA&quot;, &quot;02&quot;, &quot;ALBACETE&quot;, &quot;03&quot;, &quot;ALICANTE&quot;, &quot;04&quot;, &quot;ALMERÍA&quot;, &quot;05&quot;, &quot;ÁVILA&quot;, &quot;06&quot;, &quot;BADAJOZ&quot;, &quot;07&quot;, &quot;BALEARES&quot;, &quot;08&quot;, &quot;BARCELONA&quot;, &quot;09&quot;, &quot;BURGOS&quot;, &quot;10&quot;, &quot;CÁCERES&quot;, &quot;11&quot;, &quot;CÁDIZ&quot;, &quot;12&quot;, &quot;CASTELLÓN&quot;, &quot;13&quot;, &quot;CIUDAD REAL&quot;, &quot;14&quot;, &quot;CÓRDOBA&quot;, &quot;15&quot;, &quot;LA CORUÑA&quot;, &quot;16&quot;, &quot;CUENCA&quot;, &quot;17&quot;, &quot;GERONA&quot;, &quot;18&quot;, &quot;GRANADA&quot;, &quot;19&quot;, &quot;GUADALAJARA&quot;, &quot;20&quot;, &quot;GUIPÚZCOA&quot;, &quot;21&quot;, &quot;HUELVA&quot;, &quot;22&quot;, &quot;HUESCA&quot;, &quot;23&quot;, &quot;JAÉN&quot;, &quot;24&quot;, &quot;LEÓN&quot;, &quot;25&quot;, &quot;LÉRIDA&quot;, &quot;26&quot;, &quot;LA RIOJA&quot;, &quot;27&quot;, &quot;LUGO&quot;, &quot;28&quot;, &quot;MADRID&quot;, &quot;29&quot;, &quot;MÁLAGA&quot;, &quot;30&quot;, &quot;REGIÓN DE MURCIA&quot;, &quot;31&quot;, &quot;NAVARRA&quot;, &quot;32&quot;, &quot;ORENSE&quot;, &quot;33&quot;, &quot;ASTURIAS&quot;, &quot;34&quot;, &quot;PALENCIA&quot;,&quot;35&quot;, &quot;LAS PALMAS&quot;, &quot;36&quot;, &quot;PONTEVEDRA&quot;, &quot;37&quot;, &quot;SALAMANCA&quot;, &quot;38&quot;, &quot;SANTA CRUZ DE TENERIFE&quot;, &quot;39&quot;, &quot;CANTABRIA&quot;, &quot;40&quot;, &quot;SEGOVIA&quot;, &quot;41&quot;, &quot;SEVILLA&quot;, &quot;42&quot;, &quot;SORIA&quot;, &quot;43&quot;, &quot;TARRAGONA&quot;, &quot;44&quot;, &quot;TERUEL&quot;, &quot;45&quot;, &quot;TOLEDO&quot;, &quot;46&quot;, &quot;VALENCIA&quot;, &quot;47&quot;, &quot;VALLADOID&quot;, &quot;48&quot;, &quot;VIZCAYA&quot;, &quot;49&quot;, &quot;ZAMORA&quot;, &quot;50&quot;, &quot;ZARAGOZA&quot;, &quot;51&quot;, &quot;CEUTA&quot;, &quot;52&quot;, &quot;MELILLA&quot;, &quot;AD&quot;, &quot;ANDORRA&quot;, &quot;99&quot;, &quot;DESCONOCIDO&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dirección Completa</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DCU_LKP_Cuenta__c</fullName>
        <label>Cuenta</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Direcciones Cuenta</relationshipLabel>
        <relationshipName>Direcciones_Cuenta</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DCU_SEL_Pais__c</fullName>
        <description>País de la dirección del cliente.</description>
        <label>País</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Paises</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DCU_SEL_Provincia__c</fullName>
        <label>Provincia</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Provincias</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DCU_TXT_Codigo_Postal__c</fullName>
        <label>Código Postal</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DCU_TXT_Direccion__c</fullName>
        <label>Dirección</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DCU_TXT_Identificador__c</fullName>
        <description>(Identificador externo)</description>
        <externalId>true</externalId>
        <label>Identificador</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DCU_TXT_Poblacion__c</fullName>
        <label>Población</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <label>Dirección Cuenta</label>
    <listViews>
        <fullName>All</fullName>
        <columns>DCU_FOR_DireccionCompleta__c</columns>
        <columns>DCU_LKP_Cuenta__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
        <language>es</language>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Identificador</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Direcciones Cuenta</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Editar_campo_identificador</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(ISCHANGED(DCU_TXT_Identificador__c ),DCU_TXT_Identificador__c &lt;&gt; Name), true, false)</errorConditionFormula>
        <errorMessage>El campo identificador no puede ser modificado</errorMessage>
    </validationRules>
</CustomObject>